test/e2e/fail/015-variant-arity-mismatch/input.tjs
enum Option<T> {
    Some(T),
    None,
}

let y = Option::Some(1, 2);
